--- a/index.html
+++ b/index.html
@@ -27,15 +27,11 @@
   </div>
   <div class="about">
         <div class="abotitl"><strong>Acerca de la pagina:</strong></div>
-        <div class="abotp">En la cotidianidad se puede evidenciar la falta de guías u orientaciones que algunas veces no existen o no tenemos en nuestra vida diaria, por eso la informática y tecnología pueden ayudar a solucionar este problema, o hacer parte de ese cambio.
+        <div class="abotp">En la cotidianidad se puede evidenciar la falta de guías u orientaciones que algunas veces no existen o no tenemos en nuestra vida diaria, por eso la informática y tecnología pueden ayudar a solucionar este problema, o hacer parte de ese cambio.<br>
 
-Por eso, en el presente trabajo se quiere aportar en la herramienta de información a brindar una pequeña ayuda a nuestra comunidad tomasina; En este caso en los estudiantes de 10 y 11 del Colegio Santo Tomás Chía a que puedan guiarse y acompañarse con nuestra propuesta de material frente a su futuro proyecto de grado.
+Por eso, en el presente trabajo se quiere aportar en la herramienta de información a brindar una pequeña ayuda a nuestra comunidad tomasina; En este caso en los estudiantes de 10 y 11 del Colegio Santo Tomás Chía a que puedan guiarse y acompañarse con nuestra propuesta de material frente a su futuro proyecto de grado.<br>
 
 Con la presente propuesta también se podrá hacer un uso educativo de esta herramienta, para los próximos estudiantes dentro de los años siguientes, y así normalizar y/o formalizar los siguientes trabajos.
-
-Con esta propuesta también se espera que los siguientes estudiantes, puedan mejorar o aportar ideas que ayuden a su sociedad.
-
-Puede ser una ayuda beneficiosa para los próximos estudiantes a grado décimo a la hora de orientarlos para decidir su tema de investigación para el trabajo de grado de ellos mismos 
 </div>
   </div>
   <div class="funcion">
