--- a/tesis.html
+++ b/tesis.html
@@ -21,7 +21,7 @@
           </ul>
         </div>
     </nav>
-    <div class="startimg">
+    <div class="tesispimg">
         <div class="starttitle">TESIS</div>
     </div>
     <div class="gallery">
